# playlist-along

./: .cookiecutter.json  .flake8  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  README.rst  mypy.ini  noxfile.py  pyproject.toml
.github/: labels.yml  release-drafter.yml
.github/workflows/: constraints.txt  labeler.yml  pr-labeling.yml  release.yml  select-pypi-env.yml  tests.yml
docs/: conf.py  index.rst  manpage.rst  reference.rst  requirements.txt  truestory.rst  usage.rst
src/playlist_along/: __init__.py  __main__.py  _utils.py  cli.py  console.py  playlist.py
src/playlist_along/commands/: convert.py  create.py  display.py  inject.py
tests/: __init__.py  conftest.py  test_main.py
tests/integration/: __init__.py  conftest.py  test_create.py  test_utils.py
tests/integration/fixtures/: _test_ AIMPPL4 with cp1251 as UTF-16 LE.aimppl4  _test_ M3U with cp1251 as UTF-8 with LF in TRAKTOR3.m3u  _test_ M3U with cp1251 saved as UTF-8 BOM in KMPlayer.m3u  _test_ M3U with cp1251 saved as UTF-8 in AIMP.m3u  _test_ M3U with cp1251 saved as UTF-8 in VLC.m3u  _test_ M3U8 with cp1251 saved as UTF-8 BOM in AIMP.m3u8  _test_ M3U8 with cp1251 saved as UTF-8 in VLC.m3u8  _test_ M3U8 with utf-8 saved as cp1252 in VS Code.m3u8  _test_ NML with cp1251 as UTF-8 with LF in TRAKTOR3.nml  _test_ PLS with cp1251 saved as UTF-8 BOM in KMPlayer.pls  _test_ PLS with cp1251 saved as UTF-8 in AIMP.pls  _test_ XSPF with cp1251 saved as UTF-8 in VLC.xspf  _test_ cp1252.txt
tests/unit/: __init__.py  test_cli.py  test_console.py  test_main.py  test_playlist.py  test_utils.py
