[tool.poetry]
name = "playlist-along"
version = "2021.6.1"
description = "Python CLI app for M3U playlists conversion and processing"
authors = ["Artem Hotenov <qa@hotenov.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/hotenov/playlist-along"
repository = "https://github.com/hotenov/playlist-along"
documentation = "https://playlist-along.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/hotenov/playlist-along/releases"

[tool.poetry.dependencies]
python = "^3.6.2"
click = "^8.0.1"
charset-normalizer = "^1.3.9"
single-source = ">=0.2,<0.4"
natsort = "^7.1.1"
mutagen = "^1.45.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = {extras = ["toml"], version = "^6.2"}
safety = "^1.10.3"
mypy = "^0.941"
typeguard = "^2.13.3"
xdoctest = {extras = ["colors"], version = "^0.15.10"}
sphinx = "^4.3.2"
sphinx-autobuild = "^2021.3.14"
flake8 = "^4.0.1"
black = "^22.1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^22.1.11"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
Pygments = "^2.11.2"
flake8-import-order = "^0.18.1"
flake8-black = "^0.3.1"
pytest-datafiles = "^2.0"
pytest-mock = "^3.6.0"
furo = "^2022.3.4"

[tool.poetry.scripts]
playlist-along = "playlist_along.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["playlist_along"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
