[tool.poetry]
name = "playlist-along"
version = "2021.6.1"
description = "Python CLI app for M3U playlists conversion and processing"
authors = ["Artem Hotenov <qa@hotenov.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/hotenov/playlist-along"
repository = "https://github.com/hotenov/playlist-along"
documentation = "https://playlist-along.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/hotenov/playlist-along/releases"

[tool.poetry.dependencies]
python = "^3.9.0"
click = "^8.0.4"
charset-normalizer = ">=1.3.9,<3.0.0"
single-source = ">=0.2,<0.4"
natsort = ">=7.1.1,<9.0.0"
mutagen = "^1.45.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4"}
safety = "^2.0.0"
mypy = "^0.961"
typeguard = "^2.13.3"
xdoctest = {extras = ["colors"], version = "^1.0.0"}
sphinx = "^5.1.1"
sphinx-autobuild = "^2021.3.14"
flake8 = "^4.0.1"
black = "^22.6"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.7.1"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.7"
pep8-naming = "^0.13.0"
darglint = "^1.8.1"
Pygments = "^2.12.0"
flake8-import-order = "^0.18.1"
flake8-black = "^0.3.3"
pytest-datafiles = "^2.0"
pytest-mock = "^3.8.2"
furo = ">=2022.3.4"

[tool.poetry.scripts]
playlist-along = "playlist_along.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["playlist_along"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
