[tool.poetry]
name = "playlist-along"
version = "2022.11.11"
description = "Python CLI app for M3U playlists conversion and processing"
authors = ["Artem Hotenov <qa@hotenov.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/hotenov/playlist-along"
repository = "https://github.com/hotenov/playlist-along"
documentation = "https://playlist-along.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/hotenov/playlist-along/releases"

[tool.poetry.dependencies]
python = "^3.9.0"
click = "^8.0.4"
charset-normalizer = ">=1.3.9,<4.0.0"
single-source = ">=0.2,<0.4"
natsort = ">=7.1.1,<9.0.0"
mutagen = "^1.45.1"

[tool.poetry.dev-dependencies]
pytest= "^7.2.1"
coverage = {extras = ["toml"], version = "^7.2"}
safety = "^2.3.5"
mypy = "^1.9"
typeguard = "^2.13.3"
xdoctest = {extras = ["colors"], version = "^1.1.0"}
sphinx = "^6.1.3"
sphinx-autobuild = "^2021.3.14"
flake8 = "^6.0.0"
black = "^22.10"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.2.13"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.13.2"
darglint = "^1.8.1"
Pygments = "^2.15.0"
flake8-import-order = "^0.18.1"
flake8-black = "^0.3.5"
pytest-mock = "^3.10.0"
furo = ">=2022.3.4"

[tool.poetry.scripts]
playlist-along = "playlist_along.__main__:main"

[tool.poetry.group.test.dependencies]
pytest-datafiles = "^3.0.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["playlist_along"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
